# MultiPartyPSI

./: .gitignore  .gitmodules  BaseConfig  CMakeLists.txt  Config  Dockerfile  Follower.h  FollowerFactory.cpp  FollowerFactory.h  Leader.h  LeaderFactory.cpp  MultiPartyPSI.sln  NaiveFollower.cpp  NaiveFollower.h  NaiveLeader.cpp  NaiveLeader.h  PRG.hpp  PsiParty.cpp  PsiParty.h  PsiServer.cpp  PsiServer.h  aes_locl.h  av  experiment1.txt  experiment_1.py  experiment_2.py  experiment_3.py  experiment_utils.py  install_docker_on_all_nodes.py  kissner_experiment.py  main.cpp  make_table.py  make_table_2.py  make_table_3.py  make_table_threads.py  naor.pem  paillierRunner.py  prepare_docker.sh  remove_old.py  run_command_on_all_nodes.py  (+6 more)
Header Files/: BaseMPSIParty.h  Follower.h  FollowerFactory.h  GBFFollower.cpp  GBFFollower.h  GBFLeader.h  GF2MatrixUtils.h  GarbledBloomFilter.h  KissnerParty.h  Leader.h  LeaderFactory.h  MultiPartyPlayer.h  NaiveFollower.h  NaiveInverseFollower.h  NaiveInverseLeader.h  NaiveLeader.h  PaillierParty.h  PolynomialFollower.h  PolynomialLeader.h  PolynomialUtils.h  PsiParty.h  SimpleHashingNaiveFollower.h  SimpleHashingNaiveInverseFollower.h  SimpleHashingNaiveInverseLeader.h  SimpleHashingNaiveLeader.h  SimpleHashingPolynomialFollower.h  SimpleHashingPolynomialLeader.h  defs.h  statistics.h
Header Files/Followers/: Follower.h  GBFFollower.h  NaiveFollower.h  NaiveInverseFollower.h  PolynomialFollower.h  SimpleHashingNaiveFollower.h  SimpleHashingNaiveInverseFollower.h  SimpleHashingPolynomialFollower.h  TwoPartyFollower.h
Header Files/Leaders/: GBFLeader.h  Leader.h  NaiveInverseLeader.h  NaiveLeader.h  PolynomialLeader.h  SimpleHashingNaiveInverseLeader.h  SimpleHashingNaiveLeader.h  SimpleHashingPolynomialLeader.h  TwoPartyLeader.h
MultiPartyPSI/: MultiPartyPSI.vcxproj
PRG/: PRG.cpp  PRG.hpp
PSI/: Makefile
PSI/src/hashing/: cuckoo.cpp  cuckoo.h  simple_hashing.cpp  simple_hashing.h
PSI/src/mains/: bench_psi.cpp  psi_demo.cpp  test_psi.cpp
PSI/src/ot-based/: ot-psi.cpp  ot-psi.h
PSI/src/pk-based/: dh-psi.cpp
PSI/src/util/: typedefs.h
PSI_C_0.1/PSI/: Makefile
PSI_C_0.1/PSI/OT/: NPOTRcvr.c  NPOTRcvr.cpp  NPOTSndr.c  NPOTSndr.cpp  OTExtRcvr.c  OTExtRcvr.cpp  OTExtSndr.c  OTExtSndr.cpp
PSI_C_0.1/PSI/PSI/: AESRandom.c  AESRandom.cpp  BF.c  BF.cpp  BitMatrix.c  BitMatrix.cpp  GarbledBF.c  GarbledBF.cpp  MTBuilder.c  MTBuilder.cpp  MessageDigest.c  MessageDigest.cpp  PSI.1  RandomSource.c  RandomSource.cpp  RangeHash.c  RangeHash.cpp  Util.c  Util.cpp  chtbl.cpp  list.cpp  networkComm.c  networkComm.cpp
PSI_C_0.1/PSI/PSI.xcodeproj/: project.pbxproj
PSI_C_0.1/PSI/Threads/: BuilderTasks.c  BuilderTasks.cpp  clientTasks.c  clientTasks.cpp  serverTasks.c  serverTasks.cpp
PSI_C_0.1/PSI/client/: client.1  client.c  main.c
PSI_C_0.1/PSI/headers/: AESRandom.h  BF.h  BitMatrix.h  BuilderTasks.h  GarbledBF.h  MTBuilder.h  MessageDigest.h  NPOTRcvr.h  NPOTSndr.h  OTExtRcvr.h  OTExtSndr.h  RandomSource.h  RangeHash.h  Util.h  byteswap.h  chtbl.h  client.h  clientTasks.h  intHashTbl.h  list.h  (+4 more)
Paillier/: KissnerParty.cpp  KissnerParty.h  Paillier.cpp  Paillier.h  PaillierParty.cpp  PaillierParty.h
Source Files/: BaseMPSIParty.cpp  FollowerFactory.cpp  GBFFollower.cpp  GBFLeader.cpp  GF2MatrixUtils.cpp  GarbledBloomFilter.cpp  KissnerParty.cpp  Leader.cpp  LeaderFactory.cpp  MultiPartyPlayer.cpp  NaiveFollower.cpp  NaiveInverseLeader.cpp  NaiveLeader.cpp  PaillierParty.cpp  PolynomialFollower.cpp  PolynomialLeader.cpp  PolynomialUtils.cpp  PsiParty.cpp  SimpleHashingNaiveFollower.cpp  SimpleHashingNaiveInverseLeader.cpp  SimpleHashingNaiveLeader.cpp  SimpleHashingPolynomialFollower.cpp  SimpleHashingPolynomialLeader.cpp  defs.cpp  main.cpp
Source Files/Followers/: GBFFollower.cpp  NaiveFollower.cpp  PolynomialFollower.cpp  SimpleHashingNaiveFollower.cpp  SimpleHashingPolynomialFollower.cpp  TwoPartyFollower.cpp
Source Files/Leaders/: GBFLeader.cpp  Leader.cpp  NaiveInverseLeader.cpp  NaiveLeader.cpp  PolynomialLeader.cpp  SimpleHashingNaiveInverseLeader.cpp  SimpleHashingNaiveLeader.cpp  SimpleHashingPolynomialLeader.cpp  TwoPartyLeader.cpp
after/: experiment1.csv  experiment1_avg.csv
better/: experiment1.csv  experiment1_avg.csv
common/: MultiPartyPlayer.cpp  MultiPartyPlayer.h  defs.cpp  defs.h  statistics.h
docker/: prepare_docker.sh  restart_docker.sh
expr1/: experiment1.csv  experiment1_128.txt  experiment1_80.txt  experiment1_avg.csv  make_table.py
expr1_2/: experiment1.csv  experiment1_80.txt  experiment1_avg.csv
expr1_3/: experiment1.csv  experiment1_128.txt  experiment1_80.txt  experiment1_avg.csv
expr2/: experiment2.csv  experiment2_80.txt  experiment2_avg.csv
fin/: experiment1.csv  experiment1.csv_new  experiment1.txt  experiment1_avg.csv  experiment2.csv  experiment2.csv_new  experiment2.txt  experiment2_avg.csv  experiment3.csv  experiment3.csv_new  experiment3.txt  experiment3_avg.csv  experiment_threads.txt
fin2/: experiment2.csv
final/: experiment1.csv  experiment1.txt  experiment1_avg.csv  experiment2.csv  experiment2.txt  experiment2_avg.csv  experiment3.csv  experiment3.txt  experiment3_avg.csv
gf2x-1.1/: ChangeLog  Makefile.in  NEWS  README  build.sh  configure  configure.ac  fft.c  gf2x.c  toom2.c
gf2x-1.1/apps/: Makefile.in
gf2x-1.1/config/: acinclude.m4
gf2x-1.1/gf2x/: gf2x-small.h
gf2x-1.1/src/: Makefile.am  Makefile.in  generate-test-list.pl  mul3cl.c  mul3k3.c  mul4cl1.c  mul5k3.c  mul7cl.c  mul7k3.c  mul9cl.c  mul9clk2.c  mul9k3.c  tune-lowlevel.pl
gf2x-1.1/tests/: Makefile.in
kissner_prof/: callgrind.out.81720  callgrind.out.93100
poly_hash/: experiment1.csv  experiment1.txt  experiment1_avg.csv  experiment2.csv  experiment2.txt  experiment2_avg.csv  experiment3.csv  experiment3.txt  experiment3_avg.csv  experiment_threads.txt
profiling/BLOOM_FILTER/: callgrind.out.5630
profiling/GAUSS_SIMPLE_HASH/: callgrind.out.5431
profiling/POLYNOMIALS/: callgrind.out.5757
profiling/POLYNOMIALS_SIMPLE_HASH/: callgrind.out.5882
size20/: experiment1.csv  experiment1_avg.csv
(+35 files in other folders)
